# turn-off-macos-agents-and-daemons

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  ddmosad.sh  rust-toolchain.toml  toma.rs
.github/workflows/: ci.yml
toma/: agents-and-daemons.noon  errors.rs  launchctl.rs  lib.rs  toma.rs
