[package]
name = "turn-off-macos-agent-and-daemon"
version = "0.1.0"
edition = "2018"
autoexamples = false
autobenches = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[lib]
name = "toma"
path = "toma/lib.rs"

doctest = false
bench = false


[[bin]]
name = "toma"
path = "./toma.rs"
doctest = false
bench = false
doc = false

[[bin]]
name = "tomosad"
path = "./toma.rs"
doctest = false
bench = false
doc = false

[dependencies]
clap = { version = "4.3.7", features = ["derive", "env", "string", "unicode", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }
