[package]
name = "turn-off-macos-agents-and-daemons"
version = "0.1.0"
edition = "2018"
autoexamples = false
autobenches = false

[lib]
name = "toma"
path = "toma/lib.rs"

doctest = false
bench = false


[[bin]]
name = "toma"
path = "./toma.rs"
doctest = false
bench = false
doc = false

[dependencies]
clap = { version = "4.3.7", features = ["derive", "env", "string", "unicode", "wrap_help"] }
serde = { version = "1.0.219", features = ["derive"] }
